# KAM

./: CMakeLists.txt  CMakeLists.txt.user.275f5b3  KAM.desktop  KAM.kdev4  KAM_en_US.ts  README.md  org.kde.kam.appdata.xml  org.kde.kam.desktop  qml.qrc
data/: processors.db
include/: backend.h  processmodel.h  storagemodel.h
libksysguard/processcore/plugins/: CMakeLists.txt
libksysguard/processcore/plugins/amdgpu/: CMakeLists.txt  amdgpu.cpp  amdgpu.h  amdgpu.json
libksysguard/processcore/plugins/gpu/: CMakeLists.txt  gpu.cpp  gpu.h
qml/: main.qml
qml/controls/: CustomBtn.qml  KAMLineChart.qml  KAMProcTable.qml  KAMProgressBar.qml  KAMRadialBar.qml  LeftMenuButton.qml  ToggleButton.qml  TopBarButton.qml  TrafficMonitor.qml
qml/images/png_icons/: kam.png.import
qml/images/svg_icons/: arrow-downiconImage24px.svg.import  arrow-upiconImage24px.svg.import  chevron-lefticonImage24px.svg.import  close_icon.svg.import  cooling_icon.svg.import  home_icon.svg.import  icon_app_top.svg.import  lighting_icon.svg.import  maximize_icon.svg.import  menu_icon.svg.import  minimize_icon.svg.import  open_icon.svg.import  resize_icon.svg.import  restore_icon.svg.import  save_icon.svg.import  settings_icon.svg.import  sysinfo_icon.svg.import
qml/pages/: homePage.qml  lightingPage.qml
qml/pages/coolingPage/: coolingPage.qml
qml/pages/homePage/: KAMCPURect.qml  KAMGPURect.qml  KAMNetRect.qml  KAMProcTable.qml  KAMRAMRect.qml  homePage.qml
qml/pages/homePage/cpuPage/: CpuClockSpeedPanel.qml  CpuFanSpeedPanel.qml  CpuInfoPanel.qml  CpuLoadPanel.qml  CpuTempPanel.qml  CpuTopbar.qml  cpuPage.qml
qml/pages/homePage/gpuPage/: GpuClockSpeedPanel.qml  GpuFanSpeedPanel.qml  GpuInfoPanel.qml  GpuLoadPanel.qml  GpuTempPanel.qml  GpuTopbar.qml  gpuPage.qml
qml/pages/settingsPage/: settingsPage.qml
qml/pages/subpages/: KAMCPURect.qml  KAMGPURect.qml  KAMNetRect.qml  KAMProcTable.qml  KAMRAMRect.qml  KAMStorageRect.qml
qml/pages/sysInfoPage/: sysInfoPage.qml
source/: backend.cpp  backend.h  backend_amd.cpp  backend_cpu.cpp  backend_gpu.cpp  common.cpp  common.h  main.cpp  nvidia_nvml.cpp  nvidia_nvml.h  processmodel.cpp  processmodel.h  processors.h  radeon_drm.cpp  radeon_drm.h  radialbar.cpp  radialbar.h
src/: CMakeLists.txt  backend.cpp  backend_cpu.cpp  backend_nvidia.cpp  backend_other.cpp  lighting.cpp  main.cpp  processmodel.cpp  resources.qrc  storagemodel.cpp
src/contents/ui/: CpuRect.qml  GpuRect.qml  KAMDriveBar.qml  KAMPageHeader.qml  KAMProcTable.qml  KAMProgressBar.qml  KAMRadialBar.qml  KAMTabButton.qml  LightingPageComponent.qml  MainPageComponent.qml  MonitorTab.qml  StorRect.qml  main.qml
